--- a/libtiff/Makefile.mingw
+++ b/libtiff/Makefile.mingw
@@ -1,99 +1,74 @@
-# Modified msys makefile for mingw builds
-# Hacked together in 15 minutes; use with care
 # Usage: mingw32-make -fMakefile.mingw
 # Zlib is on; Jpeg is off
-# See EXTRA_LIBS and linker step
 
 
-# tiff-3.8.2/libtiff/Makefile.mingw
- 
-# For used with msys. All dependencies are assumed to be installed
-# in msys's /usr/local .
- 
-# To build libtiff.dll and import library libtiff.a :
-# make -fMakefile.mingw
- 
-# To install the tiff library in msys's /usr/local :
-# make install -fMakefile.mingw
- 
-# To clean up the libtiff subdirectory :
-# make clean -fMakefile.mingw
- 
 DLL_NAME = libtiff.dll
- 
+
 EXTRA_INCLS = ../../zlib
 EXTRA_LIBS = ../../zlib
- 
+
 HDRS = \
 	tiff.h \
         tiffconf.h \
 	tiffio.h \
 	tiffvers.h
- 
-SRCS = \
-	tif_aux.c \
-	tif_close.c \
-	tif_codec.c \
-	tif_color.c \
-	tif_compress.c \
-	tif_dir.c \
-	tif_dirinfo.c \
-	tif_dirread.c \
-	tif_dirwrite.c \
-	tif_dumpmode.c \
-	tif_error.c \
-	tif_extension.c \
-	tif_fax3.c \
-	tif_fax3sm.c \
-	tif_flush.c \
-	tif_getimage.c \
-	tif_jpeg.c \
-	tif_luv.c \
-	tif_lzw.c \
-	tif_next.c \
-	tif_ojpeg.c \
-	tif_open.c \
-	tif_packbits.c \
-	tif_pixarlog.c \
-	tif_predict.c \
-	tif_print.c \
-	tif_read.c \
-	tif_strip.c \
-	tif_swab.c \
-	tif_thunder.c \
-	tif_tile.c \
-	tif_unix.c \
-	tif_version.c \
-	tif_warning.c \
-	tif_write.c \
-	tif_zip.c
- 
-all: $(DLL_NAME) libtiff.a
- 
+
+OBJS	= \
+	tif_aux.o \
+	tif_close.o \
+	tif_codec.o \
+	tif_color.o \
+	tif_compress.o \
+	tif_dir.o \
+	tif_dirinfo.o \
+	tif_dirread.o \
+	tif_dirwrite.o \
+	tif_dumpmode.o \
+	tif_error.o \
+	tif_extension.o \
+	tif_fax3.o \
+	tif_fax3sm.o \
+	tif_getimage.o \
+	tif_jbig.o \
+	tif_jpeg.o \
+	tif_jpeg_12.o \
+	tif_ojpeg.o \
+	tif_flush.o \
+	tif_luv.o \
+	tif_lzw.o \
+	tif_next.o \
+	tif_open.o \
+	tif_packbits.o \
+	tif_pixarlog.o \
+	tif_predict.o \
+	tif_print.o \
+	tif_read.o \
+	tif_swab.o \
+	tif_strip.o \
+	tif_thunder.o \
+	tif_tile.o \
+	tif_version.o \
+	tif_warning.o \
+	tif_write.o \
+	tif_zip.o \
+	tif_win32.o
+
+all: libtiff.a $(DLL_NAME) libtiff.dll.a
+
 tif_config.h:	tif_config.mingw.h
 	copy /y tif_config.mingw.h tif_config.h
- 
+
 tiffconf.h:	tiffconf.mingw.h
 	copy /y tiffconf.mingw.h tiffconf.h
- 
-$(DLL_NAME): tif_config.h tiffconf.h
-	gcc -shared -s -O2 -Wall -I. -I$(EXTRA_INCLS) -L$(EXTRA_LIBS) -o $(DLL_NAME) $(SRCS) libtiff.def -lz
+
+$(DLL_NAME): $(OBJS)
+	gcc -shared -s -O3 -Wall -I. -I$(EXTRA_INCLS) -L$(EXTRA_LIBS) -o $(DLL_NAME) $(OBJS) libtiff.def -lz
 # -ljpeg
- 
-libtiff.a:
-	dlltool -d libtiff.def -D $(DLL_NAME) -l libtiff.a
- 
-install:	libtiff.a $(DLL_NAME)
-	cp -fp $(DLL_NAME) /usr/local/bin
-	cp -fp libtiff.a /usr/local/lib
-	cp -fp tiff.h /usr/local/include
-	cp -fp tiffconf.h /usr/local/include
-	cp -fp tif_config.h /usr/local/include
-	cp -fp tiffio.h /usr/local/include
-	cp -fp tiffvers.h /usr/local/include
- 
-clean:
-	rm $(DLL_NAME)
-	rm libtiff.a
-	rm tiffconf.h
-	rm tif_config.h
+
+libtiff.a: $(OBJS)
+	ar rcs $@ $(OBJS)
+
+libtiff.dll.a:
+	dlltool -d libtiff.def -D $(DLL_NAME) -l libtiff.dll.a
+
+$(OBJS): tif_config.h tiffconf.h
