--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,10 +31,11 @@ install:
   - ps: . .\gd-appveyor-helpers\appveyor_funcs.ps1
   
   # fetch deps
+  - mkdir deps
   - nuget install zlib-%build_compiler%-%build_platform% -Source https://ci.appveyor.com/nuget/zlib-94hmpf3q011d
-  - ps: move zlib* deps
+  - ps: move zlib*/* deps/*
   - nuget install libjpeg-%build_compiler%-%build_platform% -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
-  - ps: move libjpeg* deps
+  - ps: move libjpeg*/* deps/*
   
   - cd deps
   - dir
