--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,13 +33,9 @@ install:
   # fetch deps
   - mkdir deps
   - nuget install zlib-%build_compiler%-%build_platform% -Source https://ci.appveyor.com/nuget/zlib-94hmpf3q011d
-  - ps: move zlib*/* deps/*
+  - ps: move zlib*\* deps -force
   - nuget install libjpeg-%build_compiler%-%build_platform% -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
-  - ps: move libjpeg*/* deps/*
-  
-  - cd deps
-  - dir
-  - cd ..
+  - ps: move libjpeg*\* deps -force
   
   # get mingw-w64 (C:\mingw64)
   - ps: if($env:build_compiler -eq 'mingw' -and $env:build_platform -eq 'x64') {
