--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,7 @@ build_script:
   
   - if [%build_compiler%]==[msvc] (
       nmake /f makefile.vc &&
-      7z a %zip% .\libtiff\libtiff.lib .\libtiff\libtiff.dll .\libtiff\tiff.h .\libtiff\tiffconf.h .\libtiff\tiffio.h .\libtiff\tiffvers.h &&
+      7z a %zip% .\libtiff\libtiff.lib .\libtiff\libtiff_i.lib .\libtiff\libtiff.dll .\libtiff\tiff.h .\libtiff\tiffconf.h .\libtiff\tiffio.h .\libtiff\tiffvers.h &&
       appveyor PushArtifact %zip%
     )
   
