--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,6 +37,9 @@ install:
   - nuget install libjpeg-%build_compiler%-%build_platform% -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
   - ps: move libjpeg*\* deps -force
   
+  # make lib names cmake friendly
+  - del deps\*.dll*
+  
   # get mingw-w64 (C:\mingw64)
   - ps: if($env:build_compiler -eq 'mingw' -and $env:build_platform -eq 'x64') {
       invoke 'curl' '-L -o mw64.7z "http://libgd.blob.core.windows.net/mingw/x86_64-4.9.1-release-posix-seh-rt_v3-rev1.7z"';
