--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,7 @@ install:
   
   # make lib names cmake friendly
   - del deps\*.dll*
+  - if [%build_compiler%]==[mingw] copy /y deps\libzlibstatic.a deps\libz.a
   
   # get mingw-w64 (C:\mingw64)
   - ps: if($env:build_compiler -eq 'mingw' -and $env:build_platform -eq 'x64') {
