--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+version: 4.0.3.{build}
 shallow_clone: true
 
 
@@ -66,8 +67,8 @@ install:
 
 build_script:
     
-  - ps: $nupkg_b = "zlib-$($env:build_compiler)-$($env:build_platform)-$($env:APPVEYOR_REPO_BRANCH)";
-  - ps: $nupkg_c = "zlib-$($env:build_compiler)-$($env:build_platform)-$($env:APPVEYOR_REPO_COMMIT)";
+  - ps: $nupkg_b = "libtiff-$($env:build_compiler)-$($env:build_platform)-$($env:APPVEYOR_REPO_BRANCH)";
+  - ps: $nupkg_c = "libtiff-$($env:build_compiler)-$($env:build_platform)-$($env:APPVEYOR_REPO_COMMIT)";
   
   # build msvc
   
