--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - if [ "$tbs_arch" = "x86" ];
     then
       sudo apt-get -y install gcc-multilib;
+      sudo apt-get -y install g++-multilib;
     fi
 
 script:
