--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ install:
   
   - mkdir deps
   
-  - nuget install zlib-%tbs_tools%-%tbs_arch%-master -Source https://ci.appveyor.com/nuget/zlib-94hmpf3q011d
+  - nuget install zlib-%tbs_tools%-%tbs_arch%-master -Version 1.2.7.2 -Source https://ci.appveyor.com/nuget/zlib-shallow-x0n34b3pfq1b
   - ps: move zlib*\* deps -force
   - if [%tbs_tools%]==[mingw] move deps\libzlibstatic.a deps\libz.a
   - if [%tbs_tools%]==[msvc12] move deps\zlibstatic.lib deps\zlib.lib
@@ -48,7 +48,7 @@ install:
   - SET tbsd_zlib_incdir=deps
   - SET tbsd_zlib_libdir=deps
   
-  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
+  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Version 1.3.43.57 -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
   - ps: move libjpeg*\* deps -force
   - if [%tbs_tools%]==[mingw] del deps\libjpeg.dll.a
   - if [%tbs_tools%]==[msvc12] move deps\jpeg_static.lib deps\jpeg.lib
