--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ os:
 #  - osx
 
 before_install:
+  - sudo add-apt-repository --yes ppa:kalakris/cmake
   - sudo apt-get update -qq
-  - sudo apt-get -y install nasm
+  - sudo apt-get -y install nasm cmake
   - if [ "$tbs_arch" = "x86" ];
     then
       sudo apt-get -y install gcc-multilib;
