--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get -y install nasm cmake
   - if [ "$tbs_arch" = "x86" ];
     then
-      sudo apt-get -y install gcc-multilib g++-multilib libc6:i386 build-essential libgd2-xpm ia32-libs ia32-libs-multiarch;
+      sudo apt-get -y install gcc-multilib g++-multilib libc6:i386 libc6-dev:i386 build-essential libgd2-xpm ia32-libs ia32-libs-multiarch;
     fi
 
 script:
