Add debug output to find out what goes wrong

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,7 +82,9 @@ build_script:
   
   - thumbs make
   - for /f "tokens=*" %%i in ('thumbs list') do set files=%%i
+  - echo %files%
   - 7z a %zip% %files%
+  - echo "Finished zipping"
   - appveyor PushArtifact %zip%
   
   - ps: if(Test-Path $env:zip) {
