--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,9 +82,7 @@ build_script:
   
   - thumbs make
   - for /f "tokens=*" %%i in ('thumbs list') do set files=%%i
-  - echo %files%
   - 7z a %zip% %files%
-  - echo "Finished zipping"
   - appveyor PushArtifact %zip%
   
   - ps: if(Test-Path $env:zip) {
@@ -96,8 +94,8 @@ build_script:
 test_script:
   - SET fail=0
   - thumbs check || SET fail=1 & ver > nul
-  - ps: Push-Ctest-Results 'build'
-  - ps: Push-AppveyorArtifact build\Testing\Temporary\LastTest.log
+  - ps: Push-Ctest-Results '_build'
+  - ps: Push-AppveyorArtifact _build\Testing\Temporary\LastTest.log
   - exit %fail%
 
 on_success:
