--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,15 @@
-version: 4.0.3.{build}
+version: 4.0.6.{build}
 shallow_clone: true
-
+os: Visual Studio 2015
 
 environment:
   matrix:
     - tbs_arch: "x86"
-      tbs_tools: "msvc12"
+      tbs_tools: "msvc14"
       tbs_static_runtime: 0
     
     - tbs_arch: "x64"
-      tbs_tools: "msvc12"
+      tbs_tools: "msvc14"
       tbs_static_runtime: 0
     
     - tbs_arch: "x86"
@@ -40,7 +40,7 @@ install:
   
   - mkdir deps
   
-  - nuget install zlib-%tbs_tools%-%tbs_arch%-master -Version 1.2.7.2 -Source https://ci.appveyor.com/nuget/zlib-shallow-x0n34b3pfq1b
+  - nuget install zlib-%tbs_tools%-%tbs_arch%-master -Version 1.2.8.4 -Source https://ci.appveyor.com/nuget/zlib-shallow-x0n34b3pfq1b
   - ps: move zlib*\* deps -force
   - if [%tbs_tools%]==[mingw] move deps\libzlibstatic.a deps\libz.a
   - if [%tbs_tools%]==[msvc12] move deps\zlibstatic.lib deps\zlib.lib
@@ -48,7 +48,7 @@ install:
   - SET tbsd_zlib_incdir=deps
   - SET tbsd_zlib_libdir=deps
   
-  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Version 1.3.43.57 -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
+  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Version 1.4.80.20 -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
   - ps: move libjpeg*\* deps -force
   - if [%tbs_tools%]==[mingw] del deps\libjpeg.dll.a
   - if [%tbs_tools%]==[msvc12] move deps\jpeg_static.lib deps\jpeg.lib
@@ -72,7 +72,7 @@ install:
 
 
 build_script:
-  - '"C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall" %vcvar_arg%'
+  - '"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall" %vcvar_arg%'
   - if [%tbs_tools%]==[mingw] if [%tbs_arch%]==[x86] SET PATH=C:\MinGW\bin;%PATH%
   - if [%tbs_tools%]==[mingw] if [%tbs_arch%]==[x64] SET PATH=C:\mingw64\bin;%PATH%
   
