--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,10 +48,10 @@ install:
   - SET tbsd_zlib_incdir=deps
   - SET tbsd_zlib_libdir=deps
   
-  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Version 1.3.43.57 -Source https://ci.appveyor.com/nuget/libjpeg-turbo-t70qw53csfhj
+  - nuget install libjpeg-%tbs_tools%-%tbs_arch%-master -Version 1.4.80.21 -Source https://ci.appveyor.com/nuget/libjpegturbo-o6k4js4y7pjw
   - ps: move libjpeg*\* deps -force
   - if [%tbs_tools%]==[mingw] del deps\libjpeg.dll.a
-  - if [%tbs_tools%]==[msvc12] move deps\jpeg_static.lib deps\jpeg.lib
+  - if [%tbs_tools%]==[msvc12] move deps\jpeg-static.lib deps\jpeg.lib
   - SET tbsd_libjpeg_turbo_built=1
   - SET tbsd_libjpeg_turbo_incdir=deps
   - SET tbsd_libjpeg_turbo_libdir=deps
