Define _CRT_SECURE_NO_WARNINGS to avoid cascade of compiler warnings when compiling with msvc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,8 @@ foreach(flag ${test_flags})
 endforeach(flag ${test_flags})
 
 if(MSVC)
-    set(CMAKE_DEBUG_POSTFIX "d")
+  set(CMAKE_DEBUG_POSTFIX "d")
+  add_definition(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 
 option(ld-version-script "Enable linker version script" ON)
