--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,7 +184,7 @@ endforeach(flag ${test_flags})
 
 if(MSVC)
   set(CMAKE_DEBUG_POSTFIX "d")
-  add_definition(-D_CRT_SECURE_NO_WARNINGS)
+  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 
 option(ld-version-script "Enable linker version script" ON)
